@@ -123,9 +123,13 @@ class ClientTest < TinyTds::TestCase
       options = connection_options :username => 'willnotwork'
       action = lambda { new_connection(options) }
       assert_raise_tinytds_error(action) do |e|
-        assert_equal 18456, e.db_error_number
-        assert_equal 14, e.severity
-        assert_match %r{login failed}i, e.message, 'ignore if non-english test run'
+        if sqlserver_azure?
+          assert_match %r{server name cannot be determined}i, e.message, 'ignore if non-english test run'
+        else
+          assert_equal 18456, e.db_error_number
+          assert_equal 14, e.severity
+          assert_match %r{login failed}i, e.message, 'ignore if non-english test run'
+        end
       end
       assert_new_connections_work
     end
