@@ -19,8 +19,9 @@ class SchemaTest < TinyTds::TestCase
       end
       
       should 'cast binary' do
+        binary_value = sqlserver_azure? ? @gif1px : @gif1px+"\000"
         value = find_value(21, :binary_50)
-        assert_equal @gif1px+"\000", value
+        assert_equal binary_value, value
         assert_binary_encoding(value)
       end
       
@@ -31,8 +32,9 @@ class SchemaTest < TinyTds::TestCase
       end
       
       should 'cast char' do
+        partial_char = sqlserver_azure? ? '12345678' : '12345678  '
         assert_equal '1234567890', find_value(41, :char_10)
-        assert_equal '12345678  ', find_value(42, :char_10)
+        assert_equal partial_char, find_value(42, :char_10)
         assert_utf8_encoding find_value(42, :char_10)
       end
       
@@ -235,7 +237,7 @@ class SchemaTest < TinyTds::TestCase
         assert_utf8_encoding(value)
       end
       
-    end if sqlserver_2005? || sqlserver_2008?
+    end if sqlserver_2005? || sqlserver_2008? || sqlserver_azure?
     
     
     context 'for 2008 and up' do
@@ -268,7 +270,7 @@ class SchemaTest < TinyTds::TestCase
         
       end
       
-    end if sqlserver_2008?
+    end if sqlserver_2008? || sqlserver_azure?
   
   end
   
