@@ -1,4 +1,9 @@
 
+* master *
+
+* Azure tested using latest FreeTDS with submitted patch. https://gist.github.com/889190
+
+
 * 0.4.2 *
 
 * Iconv is a dep only when compiling locally. However, left in the ability to configure it for native gem installation but you must use --enable-iconv before using --with-iconv-dir=/some/dir
